--- a/Data_preprocess(weather).ipynb
+++ b/Data_preprocess(weather).ipynb
@@ -2256,7 +2256,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "cc0e99d5",
+   "id": "fb6d229f",
    "metadata": {},
    "outputs": [
     {
@@ -2535,14 +2535,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b29e800f",
+   "id": "65ef2d61",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "83774fa2",
+   "id": "860a6d6d",
    "metadata": {},
    "source": [
     "##### (전국 사계절에 따른 기후 검증 )\n",
@@ -4092,7 +4092,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "108dd46c",
+   "id": "67bc2583",
    "metadata": {},
    "source": [
     "###### (평균 온도 검증)\n",
@@ -4104,7 +4104,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "5c1a4ca4",
+   "id": "8729961f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4115,7 +4115,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "69df8d8c",
+   "id": "2c4087a1",
    "metadata": {},
    "outputs": [
     {
@@ -4221,7 +4221,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "542f5850",
+   "id": "f9860a3b",
    "metadata": {},
    "outputs": [
     {
@@ -4309,7 +4309,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "3d310959",
+   "id": "81b8d124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4319,7 +4319,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "5e3cf323",
+   "id": "ad1e575c",
    "metadata": {},
    "outputs": [
     {
@@ -4425,7 +4425,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "45253abe",
+   "id": "b0658be6",
    "metadata": {},
    "outputs": [
     {
@@ -4513,7 +4513,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "5dda3e1c",
+   "id": "013e240c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4522,7 +4522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0beb3e6",
+   "id": "6b49575e",
    "metadata": {},
    "source": [
     "##### 정규성 검정\n",
@@ -4553,7 +4553,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "e77b5d8d",
+   "id": "00d592bc",
    "metadata": {},
    "outputs": [
     {
@@ -4576,7 +4576,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "b2531d89",
+   "id": "ae43f4a6",
    "metadata": {},
    "outputs": [
     {
@@ -4597,7 +4597,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "942733ea",
+   "id": "878f2d05",
    "metadata": {},
    "outputs": [
     {
@@ -4617,7 +4617,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "ba6ae979",
+   "id": "bdb7d4ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4627,8 +4627,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "d72ee7d9",
+   "execution_count": 255,
+   "id": "b5a829c9",
    "metadata": {
     "scrolled": true
    },
@@ -4637,18 +4637,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t검정 통계량: 583693.000, pvalue=0.015\n"
+      "검정 통계량: 583693.000, pvalue=0.015\n"
      ]
     }
    ],
    "source": [
-    "print(\"t검정 통계량: %.3f, pvalue=%.3f\"%(result_temp))   # 유의수준 5%내이므로 귀무가설 기각 대립가설 채택"
+    "print(\"검정 통계량: %.3f, pvalue=%.3f\"%(result_temp))   # 유의수준 5%내이므로 귀무가설 기각 대립가설 채택"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "5dcb4f0e",
+   "id": "173650b1",
    "metadata": {},
    "outputs": [
     {
@@ -4669,7 +4669,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "6dc35ea2",
+   "id": "bf6cf146",
    "metadata": {},
    "outputs": [
     {
@@ -4688,7 +4688,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "id": "33bfb481",
+   "id": "e507c3db",
    "metadata": {},
    "outputs": [
     {
@@ -4707,7 +4707,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "9cd65f2c",
+   "id": "02361b23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4718,7 +4718,7 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "id": "6299f29a",
+   "id": "009b354e",
    "metadata": {},
    "outputs": [
     {
@@ -4824,7 +4824,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "9b7177df",
+   "id": "9a51ef51",
    "metadata": {},
    "outputs": [
     {
@@ -4912,7 +4912,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "428be79a",
+   "id": "c91dc5c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4922,7 +4922,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "e97a6ed8",
+   "id": "87e98444",
    "metadata": {
     "scrolled": true
    },
@@ -4949,7 +4949,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "4c8c39e3",
+   "id": "a08da373",
    "metadata": {},
    "outputs": [
     {
@@ -5037,7 +5037,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "eb2bdb7a",
+   "id": "6cca390a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5047,26 +5047,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "id": "08152227",
+   "execution_count": 256,
+   "id": "40e2c6ae",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t검정 통계량: 13232.500, pvalue=0.000\n"
+      "검정 통계량: 13232.500, pvalue=0.000\n"
      ]
     }
    ],
    "source": [
-    "print(\"t검정 통계량: %.3f, pvalue=%.3f\"%(result_temp_s))   # 여름일 경우도 대립가설 채택"
+    "print(\"검정 통계량: %.3f, pvalue=%.3f\"%(result_temp_s))   # 여름일 경우도 대립가설 채택"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "25eb31ce",
+   "id": "954e74c0",
    "metadata": {},
    "outputs": [
     {
@@ -5086,7 +5086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2e6c1c6",
+   "id": "03c2a9a7",
    "metadata": {},
    "source": [
     "###### (평균 상대습도 검증)\n",
@@ -5098,7 +5098,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "c5a9181f",
+   "id": "79faa20a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5109,7 +5109,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "2eed347a",
+   "id": "853f03f8",
    "metadata": {},
    "outputs": [
     {
@@ -5215,7 +5215,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "2c56ea9a",
+   "id": "8766932d",
    "metadata": {},
    "outputs": [
     {
@@ -5303,7 +5303,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "1bb4b89b",
+   "id": "16219176",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5314,7 +5314,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "3476ebe7",
+   "id": "f1b4b7ce",
    "metadata": {},
    "outputs": [
     {
@@ -5420,7 +5420,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "2d385850",
+   "id": "d6d534db",
    "metadata": {},
    "outputs": [
     {
@@ -5508,7 +5508,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "8b05d169",
+   "id": "9e6ebdb3",
    "metadata": {},
    "outputs": [
     {
@@ -5531,7 +5531,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "2bf9ef17",
+   "id": "d0d9511f",
    "metadata": {},
    "outputs": [
     {
@@ -5552,7 +5552,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "8d1711e8",
+   "id": "7e8fb391",
    "metadata": {},
    "outputs": [
     {
@@ -5572,7 +5572,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "fb436c19",
+   "id": "7476f5ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5582,26 +5582,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "id": "346640ba",
+   "execution_count": 257,
+   "id": "06d869df",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t검정 통계량: 487007.500, pvalue=0.000\n"
+      "검정 통계량: 487007.500, pvalue=0.000\n"
      ]
     }
    ],
    "source": [
-    "print(\"t검정 통계량: %.3f, pvalue=%.3f\"%(result_hum))  # 대립가설 채택"
+    "print(\"검정 통계량: %.3f, pvalue=%.3f\"%(result_hum))  # 대립가설 채택"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "50e96296",
+   "id": "7c435994",
    "metadata": {},
    "outputs": [
     {
@@ -5622,7 +5622,7 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "id": "46cf4a0b",
+   "id": "d8ee11a3",
    "metadata": {},
    "outputs": [
     {
@@ -5640,7 +5640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7f5d9a",
+   "id": "1e3c178a",
    "metadata": {},
    "source": [
     "###### (평균 풍속 검증)\n",
@@ -5652,7 +5652,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "1132bb4c",
+   "id": "615c8f0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5663,7 +5663,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "30db7801",
+   "id": "9909a5da",
    "metadata": {},
    "outputs": [
     {
@@ -5769,7 +5769,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "dcf3b58d",
+   "id": "3e259683",
    "metadata": {},
    "outputs": [
     {
@@ -5857,7 +5857,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "d40459e3",
+   "id": "ddd3a0b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5867,7 +5867,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "cb571ba1",
+   "id": "755408d0",
    "metadata": {},
    "outputs": [
     {
@@ -5973,7 +5973,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "6c767f67",
+   "id": "daf2a055",
    "metadata": {},
    "outputs": [
     {
@@ -6061,7 +6061,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "b7021f97",
+   "id": "cfbb019f",
    "metadata": {},
    "outputs": [
     {
@@ -6084,7 +6084,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "73f2a85c",
+   "id": "0b2af978",
    "metadata": {},
    "outputs": [
     {
@@ -6105,7 +6105,7 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "1976bc8a",
+   "id": "703aad26",
    "metadata": {},
    "outputs": [
     {
@@ -6125,7 +6125,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "563f93c2",
+   "id": "e2cd144f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6135,26 +6135,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
-   "id": "fda85b94",
+   "execution_count": 258,
+   "id": "2802cdea",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t검정 통계량: 391540.000, pvalue=0.000\n"
+      "검정 통계량: 391540.000, pvalue=0.000\n"
      ]
     }
    ],
    "source": [
-    "print(\"t검정 통계량: %.3f, pvalue=%.3f\"%(result_wind))  # 대립가설 채택"
+    "print(\"검정 통계량: %.3f, pvalue=%.3f\"%(result_wind))  # 대립가설 채택"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "de4cdb33",
+   "id": "3f31d1ec",
    "metadata": {},
    "outputs": [
     {
@@ -6175,7 +6175,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "1c967b03",
+   "id": "b95437c1",
    "metadata": {},
    "outputs": [
     {
@@ -6194,7 +6194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea76a832",
+   "id": "a0c781d4",
    "metadata": {},
    "outputs": [],
    "source": []
