month_occur vs other vol.1.2

--- a/Weather_Risk_Table_month.ipynb
+++ b/Weather_Risk_Table_month.ipynb
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "51a4cea1",
+   "id": "4dd634d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "39a93835",
+   "id": "0a9509ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "01d64c48",
+   "id": "7bc94ccd",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1ca7d629",
+   "id": "8585e503",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d2307925",
+   "id": "39ed70a5",
    "metadata": {
     "scrolled": true
    },
@@ -961,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5bf87c50",
+   "id": "30f4819e",
    "metadata": {
     "scrolled": true
    },
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f0031ed1",
+   "id": "a784d08b",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f04d1413",
+   "id": "1577ca61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "80ef3742",
+   "id": "9927a431",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9166184f",
+   "id": "87491cb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "39467def",
+   "id": "894a0abc",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "13d06226",
+   "id": "2b510b50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,8 +1297,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "73cb8755",
+   "execution_count": 212,
+   "id": "fe2ab48b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other=pd.read_csv(\"month_other_weather.csv\", encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "0fed48ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 216,
    "id": "a9e7a06b",
    "metadata": {},
    "outputs": [],
@@ -1320,8 +1330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "d50a9bba",
+   "execution_count": 217,
+   "id": "9bd7ed4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1330,8 +1340,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "e8d96c73",
+   "execution_count": 218,
+   "id": "86a7727d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,8 +1351,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "47eb161a",
+   "execution_count": 219,
+   "id": "8ed95392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "952bef9d",
+   "id": "60e5f94a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,8 +1371,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 220,
+   "id": "316e12c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "occur=pd.read_csv(\"month_occur_weather.csv\", encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
-   "id": "e4cc27fa",
+   "id": "90ca9a5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "bdea008c",
+   "id": "77b10da0",
    "metadata": {
     "scrolled": false
    },
@@ -1417,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "5d163c43",
+   "id": "5b0c8734",
    "metadata": {
     "scrolled": false
    },
@@ -1456,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "4a7f3cb8",
+   "id": "4677f064",
    "metadata": {
     "scrolled": false
    },
@@ -1495,8 +1515,10 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "24364f90",
-   "metadata": {},
+   "id": "510fc8a6",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1531,8 +1553,358 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 114,
+   "id": "51f77503",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>시도</th>\n",
+       "      <th>avg_temp(C)</th>\n",
+       "      <th>daily_rain(mm)</th>\n",
+       "      <th>avg_wind(m/s)</th>\n",
+       "      <th>avg_r_humidity(%)</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>강원도</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>62.5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>-3.4</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>63.2</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>경상남도</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>경상북도</td>\n",
+       "      <td>-0.9</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>50.2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>부산광역시</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   month     시도  avg_temp(C)  daily_rain(mm)  avg_wind(m/s)  \\\n",
+       "0      1    강원도          2.6             0.0            1.4   \n",
+       "1      1    경기도         -3.4             0.6            1.6   \n",
+       "2      1   경상남도         -1.0             0.0            1.8   \n",
+       "3      1   경상북도         -0.9             0.1            1.7   \n",
+       "4      1  부산광역시          6.1             0.0            1.1   \n",
+       "\n",
+       "   avg_r_humidity(%)  cnt  \n",
+       "0               62.5    2  \n",
+       "1               63.2   66  \n",
+       "2               54.0   12  \n",
+       "3               50.2    3  \n",
+       "4               58.0    2  "
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "occur.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "b9d1f533",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month</th>\n",
+       "      <th>시도</th>\n",
+       "      <th>avg_temp(C)</th>\n",
+       "      <th>daily_rain(mm)</th>\n",
+       "      <th>avg_wind(m/s)</th>\n",
+       "      <th>avg_r_humidity(%)</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [month, 시도, avg_temp(C), daily_rain(mm), avg_wind(m/s), avg_r_humidity(%), cnt]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "other.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "bec318b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 78 entries, 0 to 77\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   month              78 non-null     int64  \n",
+      " 1   시도                 78 non-null     object \n",
+      " 2   avg_temp(C)        78 non-null     float64\n",
+      " 3   daily_rain(mm)     78 non-null     float64\n",
+      " 4   avg_wind(m/s)      78 non-null     float64\n",
+      " 5   avg_r_humidity(%)  78 non-null     float64\n",
+      " 6   cnt                78 non-null     int64  \n",
+      "dtypes: float64(4), int64(2), object(1)\n",
+      "memory usage: 4.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "occur.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "35611d4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 78 entries, 0 to 77\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   month              78 non-null     int32  \n",
+      " 1   시도                 78 non-null     object \n",
+      " 2   avg_temp(C)        78 non-null     float64\n",
+      " 3   daily_rain(mm)     78 non-null     float64\n",
+      " 4   avg_wind(m/s)      78 non-null     float64\n",
+      " 5   avg_r_humidity(%)  78 non-null     float64\n",
+      "dtypes: float64(4), int32(1), object(1)\n",
+      "memory usage: 3.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "other.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de4f9256",
+   "metadata": {},
+   "source": [
+    "#### RISK TABLE SET 제작\n",
+    "    1. 위 그래프에서 occur과 non_occur 사이를 10등분하여 1~9점까지 점수를 매김\n",
+    "    2. 사이가 아닌 그 밖에 포함되면 occur과 가까우면 10점, non_occur과 가까우면 0점의 가중치를 부여함\n",
+    "    3. 각 가중치의 합을 이용 총 40점을 10점으로 비례하여 소수점 첫째자리로 위험도 측정\n",
+    "    4. 1~12월까지 하나도 없는 데이터(ex. 대전광역시 등)는 인근 시도로 동일하게 제작 \n",
+    "    5. 일부 없는 경우는 발생하지 않았다고 가정해서 가중치 0점"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "id": "8e2fc4bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sido=list(set(occur['시도']))+['대전광역시']\n",
+    "cols_weather=['avg_temp(C)','daily_rain(mm)','avg_wind(m/s)','avg_r_humidity(%)']\n",
+    "# 강수량은 의미가 적으므로 가중치를 덜 줌\n",
+    "cols_weight={'index_avg_temp(C)':3.0,'index_daily_rain(mm)':1.0,'index_avg_wind(m/s)':3.0,'index_avg_r_humidity(%)':3.0}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "id": "a9135baf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10등분 table 제작\n",
+    "table=pd.DataFrame(columns=['month','시도']+cols_weather+list(cols_weight.keys())+['Risk'])\n",
+    "for month in range(1,13): #월별\n",
+    "    for si_do in sido: # 10개구간 빈 dataset 만들기\n",
+    "        temp=pd.DataFrame(index=range(10),columns=['month','시도'])\n",
+    "        temp['month']=month\n",
+    "        temp['시도']=si_do\n",
+    "        table=table.append(temp, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "id": "3913b76a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 204/204 [00:04<00:00, 50.83it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 등분 기준 만들기\n",
+    "for n, group in tqdm(table.groupby(['month','시도'])):\n",
+    "    mon=n[0]\n",
+    "    sido=n[1]\n",
+    "    if sido=='대전광역시':  # 아예 없는 data\n",
+    "        sido='충청남도'\n",
+    "    occ=occur.query('month==@mon and 시도==@sido').reset_index(drop=True)\n",
+    "    oth=other.query('month==@mon and 시도==@sido').reset_index(drop=True)\n",
+    "    for col in cols_weather:\n",
+    "        if len(occ)!=0: # data가 있는 경우만..\n",
+    "            max_val=occ.loc[0,col]  # occur에 가까울수록 최고 점수\n",
+    "            min_val=oth.loc[0,col] # other에 가까울수록 최저 점수\n",
+    "            if max_val!=min_val:  # 두 data가 서로 같은 값이 아닌 경우\n",
+    "                table.loc[group.index[0],'index_'+col]= 10 # 최고 점수\n",
+    "                table.loc[group.index[0],col]=max_val\n",
+    "                table.loc[group.index[-1],'index_'+col]=0  # 최저 점수\n",
+    "                table.loc[group.index[-1],col]=min_val\n",
+    "                for index in group.index[1:-1]:\n",
+    "                    table.loc[index,'index_'+col]=table.loc[index-1,'index_'+col]-1\n",
+    "                    temp=np.round(table.loc[index-1,col]-((max_val-min_val)/len(group.index)), 3)  # 소수 셋째자리까지 등분\n",
+    "                    table.loc[index,col]=temp\n",
+    "            else: # 두 데이터 값이 서로 같은 경우는 가중치 0점 부여\n",
+    "                for index in group.index:\n",
+    "                    table.loc[index,'index_'+col]=0\n",
+    "                    table.loc[index,col]=max_val\n",
+    "    \n",
+    "        else: # data가 없는 경우.. 발생하지 않는다라고 가정!, 가중치 0점 부여\n",
+    "            for index in group.index:\n",
+    "                table.loc[index,'index_'+col]=0\n",
+    "                table.loc[index,col]=0  # 실제 값도 0으로 일단 제작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "88e1f8ec",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Risk 값 부여\n",
+    "for i in range(len(table)):\n",
+    "    cnt=0\n",
+    "    for col in cols_weight.keys():\n",
+    "        cnt+=table.loc[i,col]*cols_weight[col]\n",
+    "    table.loc[i,'Risk']=cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "id": "cd28a3e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.to_csv(\"Weather_Risk_table.csv\", encoding='utf-8-sig', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f5545dd3",
+   "id": "e1652df7",
    "metadata": {},
    "outputs": [],
    "source": []
