--- a/Weather_Risk_Table_ver2.ipynb
+++ b/Weather_Risk_Table_ver2.ipynb
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "19ede1f6",
+   "id": "d10aea49",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "24ce52c1",
+   "id": "799f4a5c",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5140936e",
+   "id": "24dfbd1f",
    "metadata": {},
    "source": [
     "#### RISK TABLE SET 제작\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "dabe3667",
+   "id": "79c95b85",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "def0c39a",
+   "id": "a82e2d32",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0de5f143",
+   "id": "90e7ef5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,8 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ef090cd5",
+   "execution_count": 39,
+   "id": "5847e82f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('Weather_Risk_table_ver2.csv', encoding='utf-8-sig', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fe12745c",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +515,7 @@
        "13    12         1.89             NaN   10"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "261f84bf",
+   "id": "c5ca1ad6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -525,92 +535,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ee4a4ab",
+   "id": "d0c1c7b8",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "478b7776",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
-   "id": "3913b76a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 204/204 [00:04<00:00, 50.83it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 등분 기준 만들기\n",
-    "for n, group in tqdm(table.groupby(['month','시도'])):\n",
-    "    mon=n[0]\n",
-    "    sido=n[1]\n",
-    "    if sido=='대전광역시':  # 아예 없는 data\n",
-    "        sido='충청남도'\n",
-    "    occ=occur.query('month==@mon and 시도==@sido').reset_index(drop=True)\n",
-    "    oth=other.query('month==@mon and 시도==@sido').reset_index(drop=True)\n",
-    "    for col in cols_weather:\n",
-    "        if len(occ)!=0: # data가 있는 경우만..\n",
-    "            max_val=occ.loc[0,col]  # occur에 가까울수록 최고 점수\n",
-    "            min_val=oth.loc[0,col] # other에 가까울수록 최저 점수\n",
-    "            if max_val!=min_val:  # 두 data가 서로 같은 값이 아닌 경우\n",
-    "                table.loc[group.index[0],'index_'+col]= 10 # 최고 점수\n",
-    "                table.loc[group.index[0],col]=max_val\n",
-    "                table.loc[group.index[-1],'index_'+col]=0  # 최저 점수\n",
-    "                table.loc[group.index[-1],col]=min_val\n",
-    "                for index in group.index[1:-1]:\n",
-    "                    table.loc[index,'index_'+col]=table.loc[index-1,'index_'+col]-1\n",
-    "                    temp=np.round(table.loc[index-1,col]-((max_val-min_val)/len(group.index)), 3)  # 소수 셋째자리까지 등분\n",
-    "                    table.loc[index,col]=temp\n",
-    "            else: # 두 데이터 값이 서로 같은 경우는 가중치 0점 부여\n",
-    "                for index in group.index:\n",
-    "                    table.loc[index,'index_'+col]=0\n",
-    "                    table.loc[index,col]=max_val\n",
-    "    \n",
-    "        else: # data가 없는 경우.. 발생하지 않는다라고 가정!, 가중치 0점 부여\n",
-    "            for index in group.index:\n",
-    "                table.loc[index,'index_'+col]=0\n",
-    "                table.loc[index,col]=0  # 실제 값도 0으로 일단 제작"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 244,
-   "id": "88e1f8ec",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Risk 값 부여\n",
-    "for i in range(len(table)):\n",
-    "    cnt=0\n",
-    "    for col in cols_weight.keys():\n",
-    "        cnt+=table.loc[i,col]*cols_weight[col]\n",
-    "    table.loc[i,'Risk']=cnt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 245,
-   "id": "cd28a3e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table.to_csv(\"Weather_Risk_table.csv\", encoding='utf-8-sig', index=False)"
-   ]
   },
   {
    "cell_type": "code",
