--- a/Train_data_set.ipynb
+++ b/Train_data_set.ipynb
@@ -1222,7 +1222,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
+   "id": "ccf374be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_df=pd.read_csv(\"Train_data_set.csv\", encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "912e2582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_index_df=pd.read_csv(\"Train_risk_data_set.csv\", encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "e9d8f743",
    "metadata": {},
    "outputs": [
@@ -1231,22 +1251,22 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2448189 entries, 0 to 2448188\n",
+      "RangeIndex: 4896378 entries, 0 to 4896377\n",
       "Data columns (total 10 columns):\n",
       " #   Column  Dtype  \n",
       "---  ------  -----  \n",
-      " 0   month   object \n",
-      " 1   day     object \n",
+      " 0   month   int64  \n",
+      " 1   day     int64  \n",
       " 2   시도      object \n",
       " 3   시군구     object \n",
-      " 4   철새수     object \n",
-      " 5   최초발생거리  object \n",
+      " 4   철새수     int64  \n",
+      " 5   최초발생거리  int64  \n",
       " 6   평균온도    float64\n",
       " 7   일강수량    float64\n",
       " 8   상대습도    float64\n",
       " 9   위험도     float64\n",
-      "dtypes: float64(4), object(6)\n",
-      "memory usage: 205.5+ MB\n"
+      "dtypes: float64(4), int64(4), object(2)\n",
+      "memory usage: 373.6+ MB\n"
      ]
     }
    ],
@@ -1256,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "id": "8fbf7b36",
    "metadata": {},
    "outputs": [
@@ -1288,6 +1308,7 @@
        "      <th>철새수</th>\n",
        "      <th>최초발생거리</th>\n",
        "      <th>평균온도</th>\n",
+       "      <th>일강수량</th>\n",
        "      <th>상대습도</th>\n",
        "      <th>위험도</th>\n",
        "    </tr>\n",
@@ -1302,8 +1323,9 @@
        "      <td>126690</td>\n",
        "      <td>0</td>\n",
        "      <td>-1.8</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>64.2</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1314,8 +1336,9 @@
        "      <td>126690</td>\n",
        "      <td>10</td>\n",
        "      <td>-1.8</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>64.2</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1326,8 +1349,9 @@
        "      <td>126690</td>\n",
        "      <td>20</td>\n",
        "      <td>-1.8</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>64.2</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1338,8 +1362,9 @@
        "      <td>126690</td>\n",
        "      <td>30</td>\n",
        "      <td>-1.8</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>64.2</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1350,8 +1375,9 @@
        "      <td>126690</td>\n",
        "      <td>40</td>\n",
        "      <td>-1.8</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>64.2</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1364,9 +1390,10 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11822</th>\n",
+       "      <th>23649</th>\n",
        "      <td>12</td>\n",
        "      <td>31</td>\n",
        "      <td>서울특별시</td>\n",
@@ -1374,11 +1401,12 @@
        "      <td>136044</td>\n",
        "      <td>240</td>\n",
        "      <td>-3.2</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>62.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11823</th>\n",
+       "      <th>23650</th>\n",
        "      <td>12</td>\n",
        "      <td>31</td>\n",
        "      <td>서울특별시</td>\n",
@@ -1386,11 +1414,12 @@
        "      <td>136044</td>\n",
        "      <td>250</td>\n",
        "      <td>-3.2</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>62.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11824</th>\n",
+       "      <th>23651</th>\n",
        "      <td>12</td>\n",
        "      <td>31</td>\n",
        "      <td>서울특별시</td>\n",
@@ -1398,11 +1427,12 @@
        "      <td>136044</td>\n",
        "      <td>260</td>\n",
        "      <td>-3.2</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>62.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11825</th>\n",
+       "      <th>23652</th>\n",
        "      <td>12</td>\n",
        "      <td>31</td>\n",
        "      <td>서울특별시</td>\n",
@@ -1410,11 +1440,12 @@
        "      <td>136044</td>\n",
        "      <td>270</td>\n",
        "      <td>-3.2</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>62.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11826</th>\n",
+       "      <th>23653</th>\n",
        "      <td>12</td>\n",
        "      <td>31</td>\n",
        "      <td>서울특별시</td>\n",
@@ -1422,32 +1453,33 @@
        "      <td>136044</td>\n",
        "      <td>280</td>\n",
        "      <td>-3.2</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>62.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11827 rows × 9 columns</p>\n",
+       "<p>23654 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      month day     시도  시군구     철새수 최초발생거리  평균온도  상대습도  위험도\n",
-       "0         1   1  서울특별시  종로구  126690      0  -1.8  64.2  7.0\n",
-       "1         1   1  서울특별시  종로구  126690     10  -1.8  64.2  7.0\n",
-       "2         1   1  서울특별시  종로구  126690     20  -1.8  64.2  7.0\n",
-       "3         1   1  서울특별시  종로구  126690     30  -1.8  64.2  7.0\n",
-       "4         1   1  서울특별시  종로구  126690     40  -1.8  64.2  7.0\n",
-       "...     ...  ..    ...  ...     ...    ...   ...   ...  ...\n",
-       "11822    12  31  서울특별시  종로구  136044    240  -3.2  62.0  2.0\n",
-       "11823    12  31  서울특별시  종로구  136044    250  -3.2  62.0  2.0\n",
-       "11824    12  31  서울특별시  종로구  136044    260  -3.2  62.0  2.0\n",
-       "11825    12  31  서울특별시  종로구  136044    270  -3.2  62.0  2.0\n",
-       "11826    12  31  서울특별시  종로구  136044    280  -3.2  62.0  2.0\n",
+       "       month  day     시도  시군구     철새수  최초발생거리  평균온도  일강수량  상대습도  위험도\n",
+       "0          1    1  서울특별시  종로구  126690       0  -1.8   0.0  64.2  NaN\n",
+       "1          1    1  서울특별시  종로구  126690      10  -1.8   0.0  64.2  NaN\n",
+       "2          1    1  서울특별시  종로구  126690      20  -1.8   0.0  64.2  NaN\n",
+       "3          1    1  서울특별시  종로구  126690      30  -1.8   0.0  64.2  NaN\n",
+       "4          1    1  서울특별시  종로구  126690      40  -1.8   0.0  64.2  NaN\n",
+       "...      ...  ...    ...  ...     ...     ...   ...   ...   ...  ...\n",
+       "23649     12   31  서울특별시  종로구  136044     240  -3.2   0.1  62.0  NaN\n",
+       "23650     12   31  서울특별시  종로구  136044     250  -3.2   0.1  62.0  NaN\n",
+       "23651     12   31  서울특별시  종로구  136044     260  -3.2   0.1  62.0  NaN\n",
+       "23652     12   31  서울특별시  종로구  136044     270  -3.2   0.1  62.0  NaN\n",
+       "23653     12   31  서울특별시  종로구  136044     280  -3.2   0.1  62.0  NaN\n",
        "\n",
-       "[11827 rows x 9 columns]"
+       "[23654 rows x 10 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,31 +1490,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "80fa5a60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 강수량 데이터는 의미없는것으로 보아서 독립변수로 지움\n",
-    "total_df.drop(['일강수량'], axis=1, inplace=True)\n",
-    "total_index_df.drop(['일강수량'], axis=1, inplace=True)"
+    "# 상대습도 데이터는 다중공선성으로 독립변수로 지움\n",
+    "total_df.drop(['상대습도'], axis=1, inplace=True)\n",
+    "total_index_df.drop(['상대습도'], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "id": "6ee8f6c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 위험도 부여 (철새수: 0.3, 최초발생거리:0.5, 평균온도:0.12, 상대습도:0.08)\n",
-    "total_index_df['위험도']=total_index_df['철새수']*0.3+total_index_df['최초발생거리']*0.5+total_index_df['평균온도']*0.12+total_index_df['상대습도']*0.08\n",
+    "# 위험도 부여 (철새수: 0.3, 최초발생거리:0.5, 평균온도:0.14, 일강수량:0.06)\n",
+    "total_index_df['위험도']=total_index_df['철새수']*0.3+total_index_df['최초발생거리']*0.5+total_index_df['평균온도']*0.14+total_index_df['일강수량']*0.06\n",
     "total_index_df['위험도']=total_index_df['위험도'].map(lambda x : np.round(x,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "id": "6d65bbe9",
    "metadata": {},
    "outputs": [],
@@ -1492,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "id": "419e1f9b",
    "metadata": {},
    "outputs": [],
@@ -1502,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "id": "b0af0770",
    "metadata": {},
    "outputs": [],
@@ -3261,7 +3293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
