중간발표 시각화 충청남도 공주 21.09.01 발생 가정

--- a/중간발표 관련 자료/다양한_시각화_예시_실습(충청남도_공주).ipynb
+++ b/중간발표 관련 자료/다양한_시각화_예시_실습(충청남도_공주).ipynb
@@ -685,13 +685,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# CartoDB dark_matter #지도에 마킹하기(최초발생지 발생하였다고 가정) #새로운 창 열지않고 주피터 내에서 보기\n",
+    "# \"OpenStreetMap #지도에 마킹하기(최초발생지 발생하였다고 가정) #새로운 창 열지않고 주피터 내에서 보기\n",
     "\n",
-    "m = folium.Map(location=[36, 127], tiles=\"CartoDB dark_matter\", zoom_start=7)\n",
+    "m = folium.Map(location=[36, 127], tiles=\"OpenStreetMap\", zoom_start=7)\n",
     "\n",
     "#지도 좌표찍기 (소수점 4자리까지)\n",
-    "folium.Marker([37.56380777, 126.9975552], popup='Mt. Hood Meadows').add_to(m) #서울특별시 중구\n",
-    "folium.Marker([37.26358468, 127.0287159], popup='Timberline Lodge').add_to(m) #경기도 수원시\n",
+    "folium.Marker([36.44655512, 127.119055], popup='Mt. Hood Meadows').add_to(m) #충청남도 공주\n",
     "\n",
     "m.choropleth(\n",
     "    geo_data=state_geo,\n",
@@ -713,6 +712,98 @@
     "# Save to html\n",
     "#m.save('folium_kr.html')\n",
     "#webbrowser.open_new(\"folium_kr.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cartoDB positron #지도에 마킹하기(최초발생지 발생하였다고 가정)\n",
+    "\n",
+    "m = folium.Map(location=[36, 127], tiles=\"cartoDB positron\", zoom_start=7)\n",
+    "\n",
+    "#지도 좌표찍기 (소수점 4자리까지도 가능)\n",
+    "\n",
+    "folium.Marker([36.44655512, 127.119055], popup='Mt. Hood Meadows').add_to(m) #충청남도 공주\n",
+    "\n",
+    "m.choropleth(\n",
+    "    geo_data=state_geo,\n",
+    "    name='위험도',\n",
+    "    data=state_data,\n",
+    "    columns=['CODE', '위험도'],\n",
+    "    key_on='feature.properties.SIG_CD',\n",
+    "    fill_color='PuRd',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.3,\n",
+    "    color = 'gray',\n",
+    "    legend_name = 'RISK'\n",
+    ")\n",
+    "\n",
+    "folium.LayerControl().add_to(m)\n",
+    "\n",
+    "\n",
+    "# Save to html\n",
+    "m.save('folium_kr.html')\n",
+    "webbrowser.open_new(\"folium_kr.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# OpenStreetMap, #지도에 마킹하기(최초발생지 발생하였다고 가정)\n",
+    "\n",
+    "m = folium.Map(location=[36, 127], tiles=\"OpenStreetMap\", zoom_start=7)\n",
+    "\n",
+    "#지도 좌표찍기 (소수점 4자리까지도 가능)\n",
+    "\n",
+    "folium.Marker([36.44655512, 127.119055], popup='Mt. Hood Meadows').add_to(m) #충청남도 공주\n",
+    "\n",
+    "m.choropleth(\n",
+    "    geo_data=state_geo,\n",
+    "    name='위험도',\n",
+    "    data=state_data,\n",
+    "    columns=['CODE', '위험도'],\n",
+    "    key_on='feature.properties.SIG_CD',\n",
+    "    fill_color='PuRd',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.3,\n",
+    "    color = 'gray',\n",
+    "    legend_name = 'RISK'\n",
+    ")\n",
+    "\n",
+    "folium.LayerControl().add_to(m)\n",
+    "\n",
+    "\n",
+    "# Save to html\n",
+    "m.save('folium_kr.html')\n",
+    "webbrowser.open_new(\"folium_kr.html\")"
    ]
   },
   {
